--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   },
   "dependencies": {
     "gatsby": "^4.3.0",
+    "gatsby-plugin-image": "^2.3.0",
     "gatsby-plugin-sass": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
     "gatsby-source-contentful": "^7.1.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-sharp": "^4.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.44.0"
